--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -1,3 +1,41 @@
-<p>
-  course-list works!
-</p>
+<section>
+  <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
+
+  <section class="card">
+    <header>
+      <h1 class="card-header">Training Courses</h1>
+    </header>
+    <section class="card-body">
+      <header class="row">
+        <div class="col">
+          <ngb-pagination [collectionSize]="totalCourses" boundaryLinks="true" [pageSize]="pageSize" maxSize="5" rotate="true"
+            [(page)]="current" (pageChange)="refreshTable()"></ngb-pagination>
+        </div>
+      </header>
+      <table class="table table-striped">
+        <thead>
+          <th>Title</th>
+          <th>Instructor</th>
+          <th>Path</th>
+          <th>Source</th>
+          <th>Year Completed</th>
+        </thead>
+        <tbody>
+          <tr *ngFor="let course of courses">
+            <td>{{course.title}}</td>
+            <td>{{course.instructor}}</td>
+            <td>{{course.path}}</td>
+            <td>{{course.source}}</td>
+            <td>{{course.yearCompleted}}</td>
+            <td>
+              <a [routerLink]="['/courses', course.id]" class="btn btn-info btn-sm mr-2">Edit</a>
+              <button class="btn btn-danger btn-sm" (click)="deleteCourse(course.id)">Delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+  </section>
+
+</section>
