--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,9 @@
-<p>
-  dashboard works!
-</p>
+<section>
+  <div class="jumbotron">
+    <h1 class="display-3">Training Courses Tracker</h1>
+    <hr class="my-4" />
+    <p>
+      Welcome to Training Course Tracker!
+    </p>
+  </div>
+</section>
