--- a/src/app/courses/course-edit/course-edit.component.html
+++ b/src/app/courses/course-edit/course-edit.component.html
@@ -20,16 +20,25 @@
       <fieldset class="form-group row">
         <label class="col-form-label col-sm-2" for="path">Path</label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" name="path" [(ngModel)]="course.path" placeholder="Enter techical path of course (ex: Angular or React)"
-            [ngbTypeahead]="pathSearch" />
+          <input type="text" class="form-control" name="path" [(ngModel)]="course.path" list="path-helpers" placeholder="Enter techical path of course (ex: Angular or React)" />
+          <datalist id="path-helpers">
+            <div *ngFor="let path of paths$ | async">
+              <option value="{{path}}"></option>
+            </div>
+          </datalist>
         </div>
       </fieldset>
 
       <fieldset class="form-group row">
         <label class="col-form-label col-sm-2" for="source">Source</label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" name="source" [(ngModel)]="course.source" placeholder="Enter where the course was sourced from (ex: Pluralsite)"
-            [ngbTypeahead]="sourceSearch" />
+          <input type="text" class="form-control" name="source" list="source-helpers" [(ngModel)]="course.source"
+            placeholder="Enter where the course was sourced from (ex: Pluralsite)" />
+          <datalist id="source-helpers">
+            <div *ngFor="let source of sources$ | async">
+              <option value="{{source}}"></option>
+            </div>
+          </datalist>
         </div>
       </fieldset>
 
