--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,7 +10,7 @@
     <div class="navbar-nav mr-auto">
       <a class="nav-item nav-link active" [routerLink]="['/']">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" [routerLink]="['/courses']">Courses</a>
-      <a class="nav-item nav-link" [routerLink]="['/courses/new']">Add Course</a>
+      <a class="nav-item nav-link" [routerLink]="['/admin']">Admin</a>
     </div>
   </div>
 </nav>
