Added Paths List and Edit and Sources List and Edit components

--- a/src/app/admin/path-edit/path-edit.component.html
+++ b/src/app/admin/path-edit/path-edit.component.html
@@ -1,3 +1,17 @@
-<p>
-  path-edit works!
-</p>
+<section class="container">
+  <section class="card">
+    <form *ngIf="path">
+      <fieldset class="form-group row">
+        <label class="col-form-label col-sm-2" for="name">Path Name</label>
+        <div class="col-sm-6">
+          <input type="text" class="form-control" name="name" [(ngModel)]="path.name" placeholder="Enter path name" />
+        </div>
+      </fieldset>
+
+      <div class="form-group row form-buttons">
+        <button class="btn btn-primary mr-sm-2" (click)="save()">Save</button>
+        <a class="btn btn-secondary" [routerLink]="['/admin/paths']">Cancel</a>
+      </div>
+    </form>
+  </section>
+</section>
