--- a/src/app/admin/path-list/path-list.component.html
+++ b/src/app/admin/path-list/path-list.component.html
@@ -6,7 +6,7 @@
     <section class="card-body">
       <header class="row">
         <div class="col">&nbsp;</div>
-        <div class="col"><a [routerLink]="['/paths/new']" class="btn btn-success">Add Path</a></div>
+        <div class="col"><a [routerLink]="['/admin/paths/new']" class="btn btn-success">Add Path</a></div>
       </header>
       <table class="table table-striped">
         <thead>
