--- a/src/app/admin/source-list/source-list.component.html
+++ b/src/app/admin/source-list/source-list.component.html
@@ -1,3 +1,44 @@
-<p>
-  source-list works!
-</p>
+<section>
+  <section class="card">
+    <header>
+      <h1 class="card-header">Sources</h1>
+    </header>
+    <section class="card-body">
+      <header class="row">
+        <div class="col">&nbsp;</div>
+        <div class="col"><a [routerLink]="['/admin/sources/new']" class="btn btn-success">Add Source</a></div>
+      </header>
+      <table class="table table-striped">
+        <thead>
+          <th>Path</th>
+        </thead>
+        <tbody>
+          <tr *ngFor="let source of source$ | async">
+            <td>{{source.name}}</td>
+            <td>
+              <a [routerLink]="['/admin/sources', source.id]" class="btn btn-info btn-sm mr-2">Edit</a>
+              <button class="btn btn-danger btn-sm" (click)="deleteSource(source.id,deleteModal)">Delete</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
+
+  </section>
+
+  <ng-template #deleteModal let-modal>
+    <div class="modal-header">
+      <span class="modal-title">Delete?</span>
+    </div>
+    <div class="modal-body">
+      <p><strong>Are you sure you want to delete this source?</strong></p>
+      <p>All information associated to this source will be permanently deleted.
+        <span class="text-danger">This operation can not be undone.</span></p>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-success" (click)="modal.close()">Delete</button>
+      <button class="btn btn-danger" (click)="modal.dismiss()">Cancel</button>
+    </div>
+  </ng-template>
+
+</section>
