--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,10 +7,12 @@
   </button>
 
   <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    <div class="navbar-nav mr-auto">
+    <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link active" [routerLink]="['/']">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" [routerLink]="['/courses']">Courses</a>
-      <a class="nav-item nav-link" [routerLink]="['/admin']">Admin</a>
+      <a *ngIf="!auth.isLoggedIn" class="nav-item nav-link" href="#" (click)="auth.login()">Login</a>
+      <a *ngIf="auth.isLoggedIn && auth.isAdmin" class="nav-item nav-link" [routerLink]="['/admin']">Admin</a>
+      <a *ngIf="auth.isLoggedIn" class="nav-item nav-link" href="#" (click)="auth.logout()">Logout</a>
     </div>
   </div>
 </nav>
