Added pluralsight and freeCodeCamp courses and cleaned up list

--- a/src/app/admin/path-list/path-list.component.html
+++ b/src/app/admin/path-list/path-list.component.html
@@ -11,6 +11,7 @@
       <table class="table table-striped">
         <thead>
           <th>Path</th>
+          <th>&nbsp;</th>
         </thead>
         <tbody>
           <tr *ngFor="let path of paths$ | async">
