--- a/src/app/admin/source-list/source-list.component.html
+++ b/src/app/admin/source-list/source-list.component.html
@@ -11,6 +11,7 @@
       <table class="table table-striped">
         <thead>
           <th>Path</th>
+          <th>&nbsp;</th>
         </thead>
         <tbody>
           <tr *ngFor="let source of source$ | async">
