--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -17,7 +17,7 @@
           <th>Instructor</th>
           <th>Path</th>
           <th>Source</th>
-          <th>Year Completed</th>
+          <th>&nbsp;</th>
         </thead>
         <tbody>
           <tr *ngFor="let course of courses$ | async">
@@ -25,7 +25,6 @@
             <td>{{course.instructor}}</td>
             <td>{{course.path}}</td>
             <td>{{course.source}}</td>
-            <td>{{course.yearCompleted}}</td>
             <td *ngIf="auth.isLoggedIn">
               <a [routerLink]="['/courses', course.id]" class="btn btn-info btn-sm mr-2">Edit</a>
               <button class="btn btn-danger btn-sm" (click)="deleteCourse(course.id,deleteModal)">Delete</button>
