Add font-awesome icons

--- a/src/app/admin/path-edit/path-edit.component.html
+++ b/src/app/admin/path-edit/path-edit.component.html
@@ -9,8 +9,12 @@
       </fieldset>
 
       <div class="form-group row form-buttons">
-        <button class="btn btn-primary mr-sm-2" (click)="save()">Save</button>
-        <a class="btn btn-secondary" [routerLink]="['/admin/paths']">Cancel</a>
+        <button class="btn btn-primary mr-sm-2" (click)="save()" title="Save">
+          <fa-icon [icon]="faSave"></fa-icon> Save
+        </button>
+        <a class="btn btn-secondary" [routerLink]="['/admin/paths']" title="Cancel">
+          <fa-icon [icon]="faBan"></fa-icon> Cancel
+        </a>
       </div>
     </form>
   </section>
