--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -9,7 +9,12 @@
           <ngb-pagination [collectionSize]="totalCourses$ | async" boundaryLinks="true" [pageSize]="pageSize" maxSize="5"
             rotate="true" [(page)]="current" (pageChange)="refreshTable()"></ngb-pagination>
         </div>
-        <div class="col" *ngIf="auth.isLoggedIn"><a [routerLink]="['/courses/new']" class="btn btn-success">Add Course</a></div>
+        <div class="col" *ngIf="auth.isLoggedIn">
+          <a [routerLink]="['/courses/new']" title="Add Course">
+            <fa-icon [icon]="faPlusCircle" class="fa-2x text-success"></fa-icon>
+            <span class="sr-only">Add Course</span>
+          </a>
+        </div>
       </header>
       <table class="table table-striped">
         <thead>
@@ -26,8 +31,14 @@
             <td>{{course.path}}</td>
             <td>{{course.source}}</td>
             <td *ngIf="auth.isLoggedIn">
-              <a [routerLink]="['/courses', course.id]" class="btn btn-info btn-sm mr-2">Edit</a>
-              <button class="btn btn-danger btn-sm" (click)="deleteCourse(course.id,deleteModal)">Delete</button>
+              <a [routerLink]="['/courses', course.id]" class="btn btn-info btn-sm mr-2" title="Edit">
+                <fa-icon [icon]="faPencilAlt"></fa-icon>
+                <span class="sr-only">Edit</span>
+              </a>
+              <button class="btn btn-danger btn-sm" (click)="deleteCourse(course.id,deleteModal)" title="Delete">
+                <fa-icon [icon]="faTrashAlt"></fa-icon>
+                <span class="sr-only">Delete</span>
+              </button>
             </td>
           </tr>
         </tbody>
@@ -46,8 +57,12 @@
         <span class="text-danger">This operation can not be undone.</span></p>
     </div>
     <div class="modal-footer">
-      <button class="btn btn-success" (click)="modal.close()">Delete</button>
-      <button class="btn btn-danger" (click)="modal.dismiss()">Cancel</button>
+      <button class="btn btn-primary" (click)="modal.close()" title="Delete">
+        <fa-icon [icon]="faTrashAlt"></fa-icon> Delete
+      </button>
+      <button class="btn btn-danger" (click)="modal.dismiss()" title="Cancel">
+        <fa-icon [icon]="faBan"></fa-icon> Cancel
+      </button>
     </div>
   </ng-template>
 
