--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,9 +10,10 @@
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link active" [routerLink]="['/']">Home <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" [routerLink]="['/courses']">Courses</a>
-      <a *ngIf="!auth.isLoggedIn" class="nav-item nav-link" href="#" (click)="auth.login()">Login</a>
+      <!-- <a *ngIf="!auth.isLoggedIn" class="nav-item nav-link" href="#" (click)="auth.login()">Login</a>
       <a *ngIf="auth.isLoggedIn && auth.isAdmin" class="nav-item nav-link" [routerLink]="['/admin']">Admin</a>
-      <a *ngIf="auth.isLoggedIn" class="nav-item nav-link" href="#" (click)="auth.logout()">Logout</a>
+      <a *ngIf="auth.isLoggedIn" class="nav-item nav-link" href="#" (click)="auth.logout()">Logout</a> -->
+      <a class="nav-item nav-link" [routerLink]="['/admin']">Admin</a>
     </div>
   </div>
 </nav>
