--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -9,7 +9,7 @@
           <ngb-pagination [collectionSize]="totalCourses$ | async" boundaryLinks="true" [pageSize]="pageSize" maxSize="5"
             rotate="true" [(page)]="current" (pageChange)="refreshTable()"></ngb-pagination>
         </div>
-        <div class="col" *ngIf="auth.isLoggedIn">
+        <div class="col" *ngIf="auth.isAuthenticated()">
           <a [routerLink]="['/courses/new']" title="Add Course">
             <fa-icon [icon]="faPlusCircle" class="fa-2x text-success"></fa-icon>
             <span class="sr-only">Add Course</span>
@@ -30,7 +30,7 @@
             <td>{{course.instructor}}</td>
             <td>{{course.path}}</td>
             <td>{{course.source}}</td>
-            <td *ngIf="auth.isLoggedIn">
+            <td *ngIf="auth.isAuthenticated()">
               <a [routerLink]="['/courses', course.id]" class="btn btn-info btn-sm mr-2" title="Edit">
                 <fa-icon [icon]="faPencilAlt"></fa-icon>
                 <span class="sr-only">Edit</span>
